[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "midea-cli"
version = "0.2.0"
description = "Interactive terminal CLI for Midea (NetHome Plus) WiFi air conditioners — local LAN control, a smart on/off thermostat, auto-off timers, and in-terminal temperature charts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adi Fatol" }]
keywords = [
  "midea",
  "air-conditioner",
  "hvac",
  "cli",
  "tui",
  "smart-home",
  "nethome",
  "thermostat",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Home Automation",
]
dependencies = [
  "msmart-ng>=2026.4.1",
  "rich>=13.0",
  "plotext>=5.3.2",
]

[project.urls]
Homepage = "https://github.com/adifatol/midea-cli"
Repository = "https://github.com/adifatol/midea-cli"
Issues = "https://github.com/adifatol/midea-cli/issues"

[project.scripts]
midea = "midea:cli"

[tool.setuptools]
py-modules = ["midea"]
